--- a/entertainment_db/templates/info.html
+++ b/entertainment_db/templates/info.html
@@ -100,7 +100,7 @@
                                 <td><a class="button" href="{% url 'content:delete_in_platform' c.pk %}">Detele link</a>
                                 </td>
                             {% else %}
-                                <td>No options.</td>
+                                <td>No options</td>
                             {% endif %}
 
                         </tr>
