--- a/entertainment_db/templates/info.html
+++ b/entertainment_db/templates/info.html
@@ -97,7 +97,7 @@
                             <td><a href="{{ c.url }}">{{ c.url }}</a></td>
                             <td>{{ c.user.username }}</td>
                             {% if user.pk == c.user.pk %}
-                                <td><a class="button" href="{% url 'content:delete_in_platform' c.pk %}">Detele link</a>
+                                <td><a class="button" href="{% url 'content:delete_in_platform' c.pk %}">Delete link</a>
                                 </td>
                             {% else %}
                                 <td>No options</td>
