--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>{% block title %}Entertainment DB{% endblock %}</title>
+    <link rel="icon" type="image/x-icon" href="{% static '/img/favicon.ico' %}"/>
     <link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/table.css' %}" rel="stylesheet" type="text/css">
     <!-- jQuery -->
