--- a/templates/base.html
+++ b/templates/base.html
@@ -58,15 +58,11 @@
                 delay: 250,
                 data: function (params) {
                     return {
-                        q: params.term, // search term
+                        q: params.term,
                         page: params.page
                     };
                 },
                 processResults: function (data, params) {
-                    // parse the results into the format expected by Select2
-                    // since we are using custom formatting functions we do not need to
-                    // alter the remote JSON data, except to indicate that infinite
-                    // scrolling can be used
                     params.page = params.page || 1;
 
                     return {
