--- a/templates/profile.html
+++ b/templates/profile.html
@@ -22,7 +22,7 @@
         {% endif %}
     </div>
     <div class="module">
-        <h3>My Status</h3>
+        <h3 id="status_title">My Status</h3>
         <table class="cell-border" id="datatable_status">
             <thead>
             <tr>
@@ -43,7 +43,7 @@
             {% endfor %}
             </tbody>
         </table>
-        <h3>My Ratings</h3>
+        <h3 id="rating_title">My Ratings</h3>
         <table class="cell-border" id="datatable_ratings">
             <thead>
             <tr>
