--- a/static/css/table.css
+++ b/static/css/table.css
@@ -260,7 +260,9 @@ table.dataTable, table.dataTable th, table.dataTable td {
     border-radius: 3px;
     padding: 5px;
     background-color: transparent;
-    padding: 4px
+    padding: 4px;
+    width: 50px;
+    margin: -3px 5px 5px 5px;
 }
 
 .dataTables_wrapper .dataTables_filter {
@@ -273,7 +275,8 @@ table.dataTable, table.dataTable th, table.dataTable td {
     border-radius: 3px;
     padding: 5px;
     background-color: transparent;
-    margin-left: 3px
+    margin-left: 3px;
+    margin-top: -3px;
 }
 
 .dataTables_wrapper .dataTables_info {
