--- a/entertainment_db/templates/info.html
+++ b/entertainment_db/templates/info.html
@@ -121,6 +121,8 @@
 {% block javascript %}
     <script>
         $(document).ready(function () {
+            document.getElementById('id_review').setAttribute('itemprop', 'review');
+            document.getElementById('id_review').setAttribute('itemprop', 'review');
             if ("{{ status_content.exists }}" === "1") {
                 document.getElementById('id_review').value = "{{ status_content.review }}";
                 document.getElementById('id_type').value = "{{ status_content.value }}";
